<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/prompt_semibold"
        android:layout_marginTop="21dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/News"
        android:textAlignment="center"
        android:textColor="@color/nav_bar_darkgray"
        android:textSize="20sp"
        tools:visibility="visible" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">
            <Button
                android:id="@+id/recom_butt"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/Rec"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/recom_butt3"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/Sport"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/recom_butt4"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/Bussines"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/recom_butt5"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/Scince"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/recom_butt6"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/technology"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />
            <Button
                android:id="@+id/recom_butt7"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="66dp"
                android:fontFamily="@font/prompt_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="21dip"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/health"
                android:textAllCaps="false"
                android:textColor="@color/nav_bar_darkgray"
                app:iconPadding="0dp" />
        </LinearLayout>
    </HorizontalScrollView>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_2"
        android:layout_marginTop="95dp"
    />
    <TextView
        android:id="@+id/last_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110sp"
        android:fontFamily="@font/prompt_bold"
        android:maxWidth="181dp"
        android:minHeight="24dp"
        android:text="@string/Last_News"
        android:textColor="@color/nav_bar_darkgray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/see_all"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="none"
        android:fontFamily="@font/play_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxWidth="75dp"
        android:minHeight="24dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/More"
        android:textAlignment="center"
        android:textColor="@color/orange_primary"
        android:textSize="10sp"
        app:cornerRadius="5dp"
        app:iconPadding="0dp"
        app:rippleColor="@color/nav_bar_whitegray"
        app:strokeColor="@color/orange_primary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/pag_progress_bar"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:progressDrawable="@color/orange_primary"
        android:visibility="visible"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</FrameLayout>